--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "element-ui": "^2.13.0",
         "less-loader": "^5.0.0",
         "vue": "^2.6.11",
+        "vue-axios": "^2.1.5",
         "vue-router": "^3.1.5"
     },
     "devDependencies": {
