--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "core-js": "^3.6.4",
         "element-ui": "^2.13.0",
         "less-loader": "^5.0.0",
+        "swiper": "^5.3.7",
         "vue": "^2.6.11",
+        "vue-awesome-swiper": "^4.1.0",
         "vue-axios": "^2.1.5",
         "vue-router": "^3.1.5"
     },
